# hashblock-exchange

./: .gitignore  LICENSE  README.md  docker-dev-compose.yaml  setup.py
apps/hashblock_cli/: hbadm  mygen.batch  requirements.txt
apps/hashblock_cli/scripts/: batch.py  exchange.py  genesis.py  hbadm_main.py  hbsawset.py  iso4217_to_assets.py  keygen.py  ucum_to_assets.py
apps/hashblock_rest/: app.py  requirements.txt
apps/hashblock_rest/config/: hb_rest_config.py
apps/shared/: asset.py  commit.py  decode.py  exchange.py  langparse.py  ledger.py  match.py  messaging.py  rest_client.py  setting.py  transactions.py  validator_client.py
apps/shared/hblangparse/: ast.py  core.py  funky.py  hblang_ebnf.txt  lexer.py  parse_context.py  parser.py
cli/: README.md
cli/hashblock_cli/: events.py  eventsset.py  exceptions.py  hbasset.py  hbsetting.py  keygen.py  main.py  matchcliparser.py  parser.py  resource.py  resset.py  rest_client.py  txq.py  txqcliparser.py  txqcommon.py  txqlist.py  units.py  unitsset.py
cli/sawtooth_cli/: events.py  eventsset.py  main.py  parser.py  scanner.py  units.py  unitsset.py
defconv/: README.md  stdwn  stintk  strest  stset  stshell  stup  stval
docker/: README.md  hashblock-admin  hashblock-admin-intermediate  hashblock-admin-shell  hashblock-asset-tp  hashblock-bulletproofs  hashblock-commit-tp  hashblock-dev-admin  hashblock-dev-cli  hashblock-dev-exchange-tp  hashblock-dev-generic-tp  hashblock-dev-match-tp  hashblock-dev-python  hashblock-dev-resource-tp  hashblock-dev-rest  hashblock-dev-setting-tp  hashblock-dev-units-tp  hashblock-dev-zksnark  hashblock-exchange-tp  hashblock-int-asset-tp  hashblock-int-chains-tp  hashblock-int-exchange-tp  hashblock-int-match-tp  hashblock-int-resource-tp  hashblock-int-units-tp  hashblock-match-tp  hashblock-python  hashblock-python-testing  hashblock-resource-tp  hashblock-rest  hashblock-secp256k1-zkp  hashblock-setting-tp  hashblock-track-tp  hashblock-unit-tp  hashblock-units-tp  hashblock-zkp-fork  hashblock-zkproc  hashblock-zksnark  librzcash  sawtooth-dev-python  (+3 more)
docker/compose/: hashblock-adminonly.yaml  hashblock-dev-units.yaml  hashblock-distro.yaml  hashblock-local-dbg.yaml  hashblock-local-rest.yaml  hashblock-local.yaml  hashblock-node.0.yaml  hashblock-node.1.yaml  hashblock-node.2.yaml  hashblock-node.3.yaml  hashblock-node.yaml  sawtooth-dev-units.yaml
examples/: sawtooth-local.yaml
examples/uom_intkey/: Dockerfile  dependency-reduced-pom.xml  pom.xml
families/asset/hashblock_asset/processor/: asset_type.py  handler.py  main.py
families/asset/tests/: test_tp_asset.py  test_tp_asset.yaml
families/asset/tests/hashblock_asset_test/: __init__.py  asset_message_factory.py
families/chains/hashblock_chains/processor/: handler.py  main.py
families/commit/hashblock_commit/processor/: handler.py  main.py
families/commit/tests/: test_tp_commit.py
families/events/hashblock_events/processor/: handler.py  main.py
families/events/tests/: test_tp_events.py  test_tp_events.yaml
families/events/tests/hashblock_events_test/: events_message_factory.py
families/exchange/hashblock_exchange/processor/: handler.py  main.py  services.py
families/match/tests/: test_tp_match.py  test_tp_match.yaml
families/resource/protos/: unit.proto
families/setting/tests/: test_tp_setting.py  test_tp_setting.yaml
families/unit/tests/: test_tp_asset.py  test_tp_asset.yaml
families/units/protos/: unit.proto  units.proto
families/units/tests/: test_tp_units.py  test_tp_units.yaml
integration/hashblock_integration/docker/: test_config_smoke.yaml
libs/: hbzkproc
localconfig/: dualities.yaml  hashblock_config.yaml
localkeys/: fernet.key  hashblock_zkSNARK.pk  hashblock_zkSNARK.vk  signer1.dhpriv  signer1.dhpub  signer1.priv  signer1.pub  signer2.dhpriv  signer2.dhpub  signer2.priv  signer2.pub  signer3.dhpriv  signer3.dhpub  signer3.priv  signer3.pub  skSNARK.vk  sysops.dhpriv  sysops.dhpub  sysops.priv  sysops.pub  voter1.priv  voter1.pub  voter2.priv  voter2.pub
modules/: address.py  config.py  decode.py  dualities.py  ecdh.py  exceptions.py  hashblock_zksnark.py  secure.py  state.py
network/azure/: README.md
network/azure/artifacts/: genesis.batch  hashblock_config.yaml
network/azure/config/: genesis.batch
network/azure/scripts/: configure.0.sh  configure.1.sh  configure.2.sh  configure.3.sh  configure.sh
network/azure/templates/: network-template.json
processor/: Dockerfile
processor/sawtooth_uom_processor/: handler.py  main.py
processor/sawtooth_uom_processor/protobuf/: uom_pay_pb2.py
processor/tests/: test_tp_uom.py  test_tp_uom.yaml
processor/tests/sawtooth_uom_test/: uom_message_factory.py
protos/: asset.proto  chain.proto  chains.proto  commit.proto  events.proto  exchange.proto  ledger.proto  match.proto  resource.proto  setting.proto  stsetting.proto  track.proto  unit.proto  units.proto  uom.proto
sampledata/: asset_batch.json  hbgenesis.batch  sample_batch.json
samplegenesis/: hashblock.batch
sawtooth_uom/processor/: handler.py  main.py
sawtooth_uom/processor/config/: uom.py
sdk/python/: address.py
utils/hashblock-rest/: app.py
utils/hashblock_rest/: app.py  requirements.txt
utils/hashblock_rest/config/: hb_rest.yaml
utils/shared/: decode.py
zkPROC/hashblock_zkproc/: CMakeLists.txt  roundtrip.py
zkPROC/hashblock_zkproc/src/: base64.cpp  hbzkproc.1.cpp  hbzkproc.c  hbzkproc.cpp
zkPROOF/hashblock_zkproof/: CMakeLists.txt  hbgenerate.i  roundtrip.py  setup.py
zkPROOF/hashblock_zkproof/src/: hbzkproof.c
zkSNARK/: README.md  hashblock_r1cs.hpp  hashblock_r1cs.tcc  hashblock_zksnark.i  setup.py
zkSNARK/hashblock_zksnark/: CMakeLists.txt  hashblock_zksnark.h  hashblock_zksnark.i  roundtrip.py  setup.py  untitled.py
zkSNARK/hashblock_zksnark/include/: hbutils.hpp  keyutils.hpp  match_r1cs.hpp  match_r1cs.tcc
zkSNARK/hashblock_zksnark/src/: base64.h  dogenerate.cpp  generate.cpp  generate.hpp  hashblock_r1cs.hpp  hbutils.cpp  hbzksnark.cpp  keyutils.cpp  match_r1cs.hpp  match_r1cs.tcc
(+48 files in other folders)
